[project]
name = "poetry-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "kaleido==0.2.0",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "shap>=0.46.0",
    "xgboost>=2.1.3",
    "xhtml2pdf>=0.2.16",
]
